# sport_analytics-main

./: 0050_k20_backtesting_py (1).ipynb  0050_k20_backtesting_py.ipynb  0050_k20_backtesting_py.py  Data_Science_Colab.ipynb  README.md  forms.py  gemini.ipynb  gemini.py  hi  kaggle.py  overview_of_colaboratory_features.py  prophet_twii (1).ipynb  prophet_twii.ipynb  prophet_twii.py  requirements-test.txt  setup.py  tf2_image_retraining (1).ipynb  tf2_image_retraining.ipynb  tf2_text_classification.ipynb  transfer_training_vjepa2-checkpoint.ipynb  vjepa_classifier_overall_best.pt  vjepa_streamlit.py  外部資料：本機檔案、雲端硬碟、試算表和_Cloud_Storage.ipynb
sport_analytics-main/: .gitignore  .prettierrc  docker-compose.yaml  pyproject.toml
sport_analytics-main/app/: app.py
sport_analytics-main/app/models/: __init__.py  announcement.py  evaluation.py  training.py  user.py
sport_analytics-main/app/routes/: __init__.py  auth.py  coach.py  evaluation.py  main.py  training.py
sport_analytics-main/app/templates/: base.html  index.html
sport_analytics-main/app/templates/admin/: create_athlete.html  create_coach.html  dashboard.html  edit_user.html  user_management.html
sport_analytics-main/app/templates/athlete/: announcement.html  dashboard.html  edit_evaluation.html  edit_record.html  evaluation_form.html  evaluation_records.html  upload.html
sport_analytics-main/app/templates/coach/: announcements.html  dashboard.html  rollcall.html
sport_analytics-main/migrations/versions/: b4b29fab6740_add_announcement_model_with_coach_id_.py
(+2 files in other folders)
